# football-video-action-recognition

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py  ui_common.py
app/pages/: __init__.py  data_page.py  frame_page.py  match_page.py
configs/: train.full.yaml  train.quick.yaml  train.rf.yaml  train.yaml
context/: 01-STAGE.md  02-STAGE.md  03-STAGE.md  04-STAGE.md  05-STAGE.md  GUIDELINES.md  PROJECT.md  ball_extra_dataset.md
output/: events.out.tfevents.1776472104.Filip_Laptop.7508.0  events.out.tfevents.1776472244.Filip_Laptop.13040.0  events.out.tfevents.1776473225.Filip_Laptop.14076.0  events.out.tfevents.1776473461.Filip_Laptop.14976.0  events.out.tfevents.1776473894.Filip_Laptop.4936.0  events.out.tfevents.1776474045.Filip_Laptop.17912.0  events.out.tfevents.1776474257.Filip_Laptop.14256.0  events.out.tfevents.1776620873.Filip_Laptop.17632.0  events.out.tfevents.1776621655.Filip_Laptop.3588.0  events.out.tfevents.1776622712.Filip_Laptop.12476.0  events.out.tfevents.1776624690.Filip_Laptop.12464.0  events.out.tfevents.1776636729.Filip_Laptop.2096.0  events.out.tfevents.1776637850.Filip_Laptop.21860.0  events.out.tfevents.1776639587.Filip_Laptop.22048.0  metrics.csv
scripts/: bootstrap_base_variant.py  build_ready_variants.py  build_selected_soccernet.py  download_soccernet_dataset.py  evaluate_test_split.py  export_test_visuals.py  inspect_extra_dataset.py  inspect_soccernet_dataset.py  predict.py  prepare_raw_data.py  train.py
src/murawa/data/: __init__.py  bootstrap_variant.py  path_resolver.py  (+5 more)
(+8 files in other folders)
