[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murawa"
version = "0.1.0"
description = "Baseline setup for football video action recognition project."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Project Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["murawa*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]
